--- a/public/imports.scss
+++ b/public/imports.scss
@@ -31,6 +31,7 @@
 @use './Components/NotificationComponent/NotificationComponent';
 @use './Components/VirtualizedListComponent/VirtualizedListComponent';
 @use './Components/PicsViewerComponent/PicsViewerComponent';
+@use './Components/MessengerComponent/MessageInputComponent/MessageInputComponent';
 
 @use './Views/FeedView/FeedView';
 @use './Views/ProfileView/ProfileView';
