--- a/public/Components/Messenger/MessageBar/MessageBarComponent.scss
+++ b/public/Components/Messenger/MessageBar/MessageBarComponent.scss
@@ -131,6 +131,34 @@
     position: relative;
     cursor: pointer;
     border-radius: 8px;
+    overflow: hidden;
+}
+
+.msg-bar__attachment_file {
+    height: 80px;
+    min-height: 80px;
+    min-width: 80px;
+    width: 80px;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    cursor: pointer;
+    border-radius: 8px;
+    overflow: hidden;
+    padding: 8px;
+    background: var(--background-light-gray);
+    justify-content: space-between;
+    font-size: 12px;
+    line-height: var(--line-height-m);
+    word-break: break-all;
+    user-select: none;
+}
+
+.msg-bar__attachment video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 480px) {
