--- a/public/imports.scss
+++ b/public/imports.scss
@@ -33,6 +33,7 @@
 @use './Components/Messenger/ChatWindowComponent';
 @use './Components/Messenger/ChatsPanelComponent';
 @use './Components/Messenger/ChatComponent';
+@use './Components/Messenger/MessageComponent/MessageComponent';
 @use './Components/Messenger/MessageBar/MessageBarComponent';
 @use './Components/Messenger/MessageBar/EmojiBarComponent/EmojiBarComponent';
 
