--- a/public/Components/FileAttachmentComponent/FileAttachmentComponent.scss
+++ b/public/Components/FileAttachmentComponent/FileAttachmentComponent.scss
@@ -10,6 +10,7 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
     line-clamp: 1;
+    word-break: break-all;
 }
 
 .attachment__info {
