--- a/public/Components/PicsViewerComponent/PicsViewerComponent.scss
+++ b/public/Components/PicsViewerComponent/PicsViewerComponent.scss
@@ -26,7 +26,7 @@
 .pics-viewer__pic {
     max-height: 90vh;
     max-width: 90vw;
-    height: 100%;
+    height: auto;
     width: 100%;
     object-fit: contain;
 }
