header status debug

--- a/public/Components/FileAttachmentComponent/FileAttachmentComponent.scss
+++ b/public/Components/FileAttachmentComponent/FileAttachmentComponent.scss
@@ -36,7 +36,7 @@
     min-height: 28px;
     width: 28px;
     height: 28px;
-    background: var(--icon-accent);
+    background: var(--button-primary-disabled);
     border-radius: 6px;
     transition: var(--trans-menu);
 }
