--- a/public/constants.scss
+++ b/public/constants.scss
@@ -116,6 +116,7 @@ html.theme_dark {
     --trans-input: all 0.15s ease-out;
     --trans-btn: all 0.15s ease-out;
     --trans-menu: all 0.15s ease-out;
+    --trans-swiper: all 0.3s;
     --trans-dropdown: all 0.2s ease-out;
     --trans-post-slider: all 0.2s ease;
 }
