--- a/public/Components/PicsViewerComponent/PicsViewerComponent.scss
+++ b/public/Components/PicsViewerComponent/PicsViewerComponent.scss
@@ -1,15 +1,39 @@
-.pics-viewer__bg {
-    background: var(--background-black-transparent-dark);
-    width: 100%;
-    height: 100vh;
+.pics-viewer__wrapper {
+    display: flex;
+    flex-direction: row;
     position: fixed;
+    background: var(--background-black-transparent-dark);
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
     z-index: 2;
     overflow: hidden;
+
+    & .post__nav {
+        opacity: 0.6;
+        width: 32px;
+        height: 32px;
+
+        &:hover {
+            opacity: 0.8;
+        }
+
+        &:active {
+            opacity: 0.9;
+        }
+    }
+}
+
+.pics-viewer__slider {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    transition: var(--trans-swiper);
+}
+
+.pics-viewer__bg {
+    min-width: 100vw;
+    height: 100vh;
 }
 
 .pics-viewer {
@@ -19,14 +43,19 @@
     align-items: center;
     gap: 20px;
     overflow: scroll;
-    padding: 56px;
+    padding: 48px 56px;
     height: 100vh;
+    justify-content: center;
 }
 
 .pics-viewer__pic {
-    max-height: 90vh;
-    max-width: 90vw;
+    max-height: 100%;
+    max-width: 100%;
     height: auto;
-    width: 100%;
+    width: auto;
     object-fit: contain;
+
+    &:active {
+        cursor: grabbing;
+    }
 }
