--- a/public/Components/Post/PostComponent/PostComponent.scss
+++ b/public/Components/Post/PostComponent/PostComponent.scss
@@ -31,6 +31,8 @@
         word-break: break-word;
         white-space: pre-line;
 
+        margin-top: -4px;
+
         &_expanded {
             display: block;
             -webkit-line-clamp: unset;
