posts video supporting

--- a/public/imports.scss
+++ b/public/imports.scss
@@ -7,6 +7,7 @@
 @use './Components/UI/TextareaComponent/TextareaComponent';
 @use './Components/UI/PopUpComponent/PopUpComponent';
 @use './Components/UI/IFrameComponent/IFrameComponent';
+@use './Components/UI/VideoComponent/VideoComponent';
 
 @use './Components/Post/PostComponent/PostComponent';
 @use './Components/Post/CommentsComponent/CommentsComponent';
