--- a/public/Components/UI/VideoComponent/VideoComponent.scss
+++ b/public/Components/UI/VideoComponent/VideoComponent.scss
@@ -16,12 +16,7 @@
     min-height: 100%;
     width: 100%;
     height: 100%;
-    background: linear-gradient(
-        90deg,
-        var(--background-light-gray) 0%,
-        var(--icon-primary-disabled) 50%,
-        var(--background-light-gray) 100%
-    );
+    background: linear-gradient(90deg, #f5f6f7 0%, var(--icon-primary-disabled) 50%, #f5f6f7 100%);
     background-size: 200% 100%;
     animation: shimmer 1.5s infinite ease-in-out;
     position: relative;
