post response reformat

--- a/public/Components/Post/PostComponent/PostComponent.scss
+++ b/public/Components/Post/PostComponent/PostComponent.scss
@@ -291,6 +291,10 @@
         width: 100%;
     }
 
+    .post__info {
+        padding-right: 24px;
+    }
+
     .post__pics {
         width: 100vw;
         aspect-ratio: 4 / 5;
