--- a/public/Components/Post/PostComponent/PostComponent.scss
+++ b/public/Components/Post/PostComponent/PostComponent.scss
@@ -284,6 +284,16 @@
         font-size: 12px;
         color: var(--text-white);
     }
+
+    &__files {
+        display: flex;
+        flex-direction: row;
+        gap: 4px;
+        width: 100%;
+        overflow: scroll;
+        border-radius: 8px;
+        margin: -4px 0;
+    }
 }
 
 @media screen and (max-width: 480px) {
