--- a/public/imports.scss
+++ b/public/imports.scss
@@ -8,6 +8,7 @@
 @use './Components/UI/PopUpComponent/PopUpComponent';
 @use './Components/UI/IFrameComponent/IFrameComponent';
 @use './Components/UI/VideoComponent/VideoComponent';
+@use './Components/UI/ImageComponent/ImageComponent';
 
 @use './Components/Post/PostComponent/PostComponent';
 @use './Components/Post/CommentsComponent/CommentsComponent';
