--- a/public/Components/Post/CommentComponent/CommentComponent.scss
+++ b/public/Components/Post/CommentComponent/CommentComponent.scss
@@ -100,9 +100,9 @@
     color: var(--icon-primary);
     width: 16px;
     height: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
 }
 
 .comment__action .post__counter {
@@ -117,7 +117,7 @@
     color: var(--icon-primary);
     width: 16px;
     height: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
 }
