comments order changed

--- a/public/imports.scss
+++ b/public/imports.scss
@@ -34,6 +34,7 @@
 @use './Components/VirtualizedListComponent/VirtualizedListComponent';
 @use './Components/PicsViewerComponent/PicsViewerComponent';
 @use './Components/FileAttachmentComponent/FileAttachmentComponent';
+@use './Components/AudioPlayerComponent/AudioPlayerComponent';
 
 @use './Components/Messenger/MessengerComponent';
 @use './Components/Messenger/ChatWindowComponent';
