--- a/public/constants.scss
+++ b/public/constants.scss
@@ -45,6 +45,9 @@
     --button-primary-hover: #3b60ed;
     --button-primary-active: #3155e0;
     --button-primary-disabled: #849cfb;
+    --button-critical: #ff3b2f;
+    --button-critical-hover: #f23024;
+    --button-critical-active: #e5271c;
     --button-secondary: #fff;
     --button-secondary-hover: #f5f6f7;
     --button-secondary-active: #edeef0;
@@ -102,6 +105,9 @@ html.theme_dark {
     --button-primary-hover: #3b60ed;
     --button-primary-active: #3155e0;
     --button-primary-disabled: #384a8d;
+    --button-critical: #ff3b2f;
+    --button-critical-hover: #f23024;
+    --button-critical-active: #e5271c;
     --button-secondary: #212121;
     --button-secondary-hover: #333333;
     --button-secondary-active: #292929;
