--- a/public/Components/Post/CommentsComponent/CommentsComponent.scss
+++ b/public/Components/Post/CommentsComponent/CommentsComponent.scss
@@ -33,6 +33,10 @@
         &:hover {
             color: var(--text-accent-hover);
         }
+
+        &.disabled {
+            color: var(--text-secondary);
+        }
     }
 
     &__bar {
