--- a/public/Components/Messenger/MessageComponent/MessageComponent.scss
+++ b/public/Components/Messenger/MessageComponent/MessageComponent.scss
@@ -79,7 +79,9 @@
 
 .context-menu.msg__context-menu {
     right: 16px;
-    top: calc(50% - 24px);
+    top: unset;
+    bottom: unset;
+    align-self: center;
 }
 
 @keyframes pulse {
