--- a/public/Components/AudioPlayerComponent/AudioPlayerComponent.scss
+++ b/public/Components/AudioPlayerComponent/AudioPlayerComponent.scss
@@ -4,6 +4,8 @@
     gap: 4px;
 
     min-width: 300px;
+    max-width: 100%;
+    width: 100%;
     border-radius: 8px;
     background: var(--background-light-gray);
     padding: 8px;
