--- a/public/Components/Messenger/MessageComponent/MessageComponent.scss
+++ b/public/Components/Messenger/MessageComponent/MessageComponent.scss
@@ -52,6 +52,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    height: 48px;
     align-items: center;
     background: var(--background-light-gray);
     border-radius: 8px;
