--- a/public/Components/Post/CommentComponent/CommentComponent.scss
+++ b/public/Components/Post/CommentComponent/CommentComponent.scss
@@ -11,7 +11,25 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    width: 100%;
+    width: calc(100% - 28px - 8px);
+
+    & .msg__media {
+        margin: 4px 0;
+    }
+
+    & .msg__stickers {
+        margin: 4px 0;
+    }
+
+    & .msg__files {
+        flex-direction: row;
+        overflow: scroll;
+        width: 100%;
+        max-width: unset;
+        border-radius: 8px;
+        padding: 0;
+        margin: 4px 0;
+    }
 }
 
 .comment__header {
@@ -23,6 +41,12 @@
 
 .comment__author {
     font-weight: var(--font-weight-bold);
+    display: -webkit-box;
+    overflow: hidden;
+    word-break: break-all;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
 }
 
 .comment__text {
@@ -78,6 +102,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    padding-right: 48px;
 }
 
 .comment__actions {
