other people friends list

--- a/public/Components/NotificationComponent/NotificationComponent.scss
+++ b/public/Components/NotificationComponent/NotificationComponent.scss
@@ -79,7 +79,7 @@
         width: 100%;
     }
 
-    .notification .xs {
+    .notification .avatar_xs {
         width: 48px;
         height: 48px;
         min-width: 48px;
