--- a/public/Components/Messenger/ChatsPanelComponent.scss
+++ b/public/Components/Messenger/ChatsPanelComponent.scss
@@ -18,7 +18,7 @@
 .chats-panel__header {
     padding: 10px 20px 8px 20px;
     width: 100%;
-    height: 92px;
+    // height: 92px;
     background: var(--background-white);
 }
 
@@ -27,9 +27,11 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    padding: 0px 0px 10px 0px;
+    // padding: 0px 0px 10px 0px;
     width: 100%;
-    height: 42px;
+    // height: 42px;
+
+    height: 32px;
 }
 
 .chats-panel__title {
